<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieDB</string>
    <string name="img">img</string>
    <string name="nullString">Lorem Ipsum</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="production_country">Production Country</string>
    <string name="production_company">Production Company</string>
    <string name="overview">Overview</string>
</resources>