<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_soft"
    tools:context=".view.MovieDetail">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nullString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/img_poster_movie_detail"
                app:layout_constraintStart_toStartOf="@+id/img_poster_movie_detail"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/rv_genre"
                app:layout_constraintStart_toStartOf="@+id/rv_genre"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tv_title_movie_detail"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:elevation="12dp"
                android:fontFamily="sans-serif-black"
                android:maxLines="3"
                android:minLines="1"
                android:outlineAmbientShadowColor="#000000"
                android:outlineSpotShadowColor="#000000"
                android:shadowColor="#000000"
                android:shadowDx="24"
                android:shadowDy="24"
                android:text="@string/nullString"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_poster_movie_detail"
                app:layout_constraintStart_toStartOf="@+id/img_poster_movie_detail"
                app:layout_constraintTop_toTopOf="@+id/img_poster_movie_detail" />

            <ImageView
                android:id="@+id/img_poster_movie_detail"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/black"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/genre"
                android:textColor="#DDDDDD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/img_poster_movie_detail"
                app:layout_constraintTop_toBottomOf="@+id/img_poster_movie_detail" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                android:textColor="#FFDDDDDD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/rv_genre"
                app:layout_constraintTop_toBottomOf="@+id/rv_genre" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/production_country"
                android:textColor="#FFDDDDDD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/rv_language"
                app:layout_constraintTop_toBottomOf="@+id/rv_language" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_production_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/rv_language"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/production_company"
                android:textColor="#FFDDDDDD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/rv_production_country"
                app:layout_constraintTop_toBottomOf="@+id/rv_production_country" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_production_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/rv_production_country"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textColor="#FFDDDDDD"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/rv_production_company"
                app:layout_constraintTop_toBottomOf="@+id/rv_production_company" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/nullString"
                android:textColor="#DDDDDD"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rv_production_company"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>